--- a/national_prepoll_map_combined.html
+++ b/national_prepoll_map_combined.html
@@ -10758,6 +10758,6 @@
         .attr("class", "caption")
         .attr("y", 21)
         .attr("fill", "black")
-        .text("Votes Cast at Physical Locations (Daily Totals Visible for All)");
+        .text("Darker = Higher Relative Vote Total Within State)");
 </script>
 </html>
